Got rid of generics